--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,14 @@
     <string name="login">Login</string>
     <string name="start">Start</string>
     <string name="let_s_login">Let\'s login</string>
+    <string name="let_s_register">Let\'s register</string>
+    <string name="already_have_an_account_login_here">Already have an account? Login here</string>
+    <string name="first_name">First Name</string>
+    <string name="last_name">Last Name</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="facebook">Facebook</string>
+    <string name="google">Google</string>
+    <string name="don_t_have_an_account_yet_register_here">Don\'t have an account yet? Register here</string>
+    <string name="forgot_password_click_here">Forgot password? Click here</string>
 </resources>
