--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="we_will_send_you_a_link_to_reset_your_password">We will send you a link to reset your password</string>
     <string name="cancel">Cancel</string>
     <string name="send">Sendl</string>
+    <string name="search_now">Search Now</string>
 </resources>
