--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
     <string name="cancel">Cancel</string>
     <string name="send">Sendl</string>
     <string name="search_now">Search Now</string>
+    <string name="best_deals">Best deals</string>
+    <string name="best_products">Best products</string>
 </resources>
